# dataotter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/dataotter/: __init__.py  _bindings.py  _normalize.py  _runner.py  api.py  engine.py  errors.py  stores.py  types.py
src/dataotter/clients/: __init__.py  openai_client.py
tests/: test_map.py
