[project]
name = "dataotter"
version = "0.1.0"
description = "Local persistence for async maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.36.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
